LPS-49317 Pass a parameter to flag that root containers should be shown. In most cases this root containers are the same as regular containers but in other cases (as wiki) there are two types of containers (nodes and pages itself). The first time the popup is loaded we need to show the root container model

--- a/portal-web/docroot/html/portlet/trash/action/restore.jspf
+++ b/portal-web/docroot/html/portlet/trash/action/restore.jspf
@@ -44,7 +44,9 @@ TrashHandler trashHandler = TrashHandlerRegistryUtil.getTrashHandler(entry.getCl
 			<portlet:param name="redirect" value="<%= redirect %>" />
 			<portlet:param name="className" value="<%= entry.getClassName() %>" />
 			<portlet:param name="classPK" value="<%= String.valueOf(entry.getClassPK()) %>" />
-			<portlet:param name="containerModelClassName" value="<%= trashHandler.getContainerModelClassName() %>" />
+			<portlet:param name="containerModelClassName" value="<%= trashHandler.getContainerModelClassName(entry.getClassPK()) %>" />
+			<portlet:param name="containerModelId" value="<%= String.valueOf(trashHandler.getContainerModelId(entry.getClassPK())) %>" />
+			<portlet:param name="hasRootContainerModel" value="<%= String.valueOf(trashHandler.hasRootContainerModel()) %>" />
 		</portlet:renderURL>
 
 		<%
