LPS-78622 Updates styles

--- a/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/portal/_editor_alloy.scss
+++ b/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/portal/_editor_alloy.scss
@@ -55,8 +55,8 @@
 			}
 		}
 
-		.cke_widget_videoembed {
-			.embed-video-help-message {
+		.cke_widget_embedurl {
+			.embed-help-message {
 				color: #FFF;
 				font-weight: 600;
 				opacity: 0;
@@ -97,7 +97,7 @@
 						opacity: 0.6;
 					}
 
-					.embed-video-help-message {
+					.embed-help-message {
 						opacity: 1;
 					}
 				}
